# ft_printf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.out  author  history.csv  main.c  main_for_tests.c  results.txt
includes/: ft_printf.h  utils.h
srcs/: debug_utils.c  ft_printf.c  ft_vdprintf.c  ft_vfprintf.c  parse_placeholder.c  processing_di.c  processing_types.c  utils.c
srcs/processing_types/: processing_b.c  processing_c.c  processing_di.c  processing_f.c  processing_n.c  processing_o.c  processing_p.c  processing_s.c  processing_u.c  processing_x.c
srcs/utils/: bignum.c  bignum_math.c  float_format.c  ft_itoa_base.c  ftoa.c  itoa_base.c  karatsuba.c  res.out  rounding.c
